--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "boilerplate-2021",
-  "scripts": {
-    "a": "yarn add -D -E",
-    "commit": "yarn git-cz",
-    "postinstall": "husky install config/git/husky"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-customizable"
+    "name": "boilerplate-2021",
+    "scripts": {
+        "a": "yarn add -D -E",
+        "commit": "yarn git-cz",
+        "postinstall": "husky install config/git/husky"
     },
-    "cz-customizable": {
-      "config": "config/git/commitizen.js"
+    "config": {
+        "commitizen": {
+            "path": "cz-customizable"
+        },
+        "cz-customizable": {
+            "config": "config/git/commitizen.js"
+        }
+    },
+    "devDependencies": {
+        "@commitlint/cli": "12.1.1",
+        "@commitlint/config-conventional": "12.1.1",
+        "commitizen": "4.2.3",
+        "commitlint": "12.1.1",
+        "cz-customizable": "6.3.0",
+        "eslint": "7.23.0",
+        "eslint-config-airbnb-base": "14.2.1",
+        "eslint-config-prettier": "8.1.0",
+        "eslint-plugin-import": "2.22.1",
+        "husky": "6.0.0",
+        "prettier": "2.2.1"
     }
-  },
-  "devDependencies": {
-    "@commitlint/cli": "12.1.1",
-    "@commitlint/config-conventional": "12.1.1",
-    "commitizen": "4.2.3",
-    "commitlint": "12.1.1",
-    "cz-customizable": "6.3.0",
-    "husky": "6.0.0"
-  }
 }
