--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,9 @@
 yarnPath: .yarn/releases/yarn-2.4.1.cjs
+
+packageExtensions:
+  eslint-module-utils@*:
+    dependencies:
+      eslint-import-resolver-node: "*"
+  debug@*:
+    dependencies:
+      supports-color: "*"
