--- a/packages/frontend-react/package.json
+++ b/packages/frontend-react/package.json
@@ -10,6 +10,9 @@
         "@babel/core": "7.13.15",
         "@babel/preset-env": "7.13.15",
         "@babel/preset-react": "7.13.13",
+        "@babel/preset-typescript": "7.13.0",
+        "@types/react": "17.0.3",
+        "@types/react-dom": "17.0.3",
         "babel-loader": "8.2.2",
         "eslint": "7.23.0",
         "eslint-config-airbnb": "18.2.1",
@@ -21,6 +24,7 @@
         "html-webpack-plugin": "5.3.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "typescript": "4.2.4",
         "webpack": "5.31.2",
         "webpack-cli": "4.6.0",
         "webpack-dev-server": "3.11.2"
