build(root, frontend-react): Check types at pre-commit stage

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,9 +1,13 @@
-yarnPath: .yarn/releases/yarn-2.4.1.cjs
-
 packageExtensions:
-  eslint-module-utils@*:
-    dependencies:
-      eslint-import-resolver-node: "*"
   debug@*:
     dependencies:
       supports-color: "*"
+  eslint-module-utils@*:
+    dependencies:
+      eslint-import-resolver-node: "*"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+
+yarnPath: .yarn/releases/yarn-2.4.1.cjs
