--- a/packages/frontend-react/package.json
+++ b/packages/frontend-react/package.json
@@ -3,7 +3,8 @@
     "private": true,
     "scripts": {
         "a": "yarn g:a",
-        "dev": "yarn webpack serve"
+        "dev": "yarn webpack serve",
+        "lint": "yarn lint-staged"
     },
     "devDependencies": {
         "@babel/cli": "7.13.14",
@@ -22,6 +23,7 @@
         "eslint-plugin-react": "7.23.2",
         "eslint-plugin-react-hooks": "4.2.0",
         "html-webpack-plugin": "5.3.1",
+        "lint-staged": "10.5.4",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "typescript": "4.2.4",
