--- a/packages/frontend-react/tsconfig.json
+++ b/packages/frontend-react/tsconfig.json
@@ -10,7 +10,7 @@
         "noImplicitReturns": true,
         "forceConsistentCasingInFileNames": true,
         "declaration": true,
-        "emitDeclarationOnly": true,
+        "noEmit": true,
         "isolatedModules": true
     },
     "include": ["src"]
