--- a/packages/frontend-react/package.json
+++ b/packages/frontend-react/package.json
@@ -14,6 +14,7 @@
         "@babel/preset-typescript": "7.13.0",
         "@types/react": "17.0.3",
         "@types/react-dom": "17.0.3",
+        "@types/react-router-dom": "5.1.7",
         "babel-loader": "8.2.2",
         "eslint": "7.23.0",
         "eslint-config-airbnb": "18.2.1",
@@ -26,6 +27,7 @@
         "lint-staged": "10.5.4",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-router-dom": "5.2.0",
         "typescript": "4.2.4",
         "webpack": "5.31.2",
         "webpack-cli": "4.6.0",
