--- a/packages/frontend-react/package.json
+++ b/packages/frontend-react/package.json
@@ -14,6 +14,7 @@
         "@babel/preset-env": "7.13.15",
         "@babel/preset-react": "7.13.13",
         "@babel/preset-typescript": "7.13.0",
+        "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
         "@testing-library/jest-dom": "5.11.10",
         "@testing-library/react": "11.2.6",
         "@types/jest": "26.0.22",
@@ -34,6 +35,7 @@
         "lint-staged": "10.5.4",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-refresh": "0.10.0",
         "react-router-dom": "5.2.0",
         "typescript": "4.2.4",
         "webpack": "5.31.2",
