--- a/packages/frontend-react/tsconfig.json
+++ b/packages/frontend-react/tsconfig.json
@@ -9,9 +9,8 @@
         "noUnusedParameters": true,
         "noImplicitReturns": true,
         "forceConsistentCasingInFileNames": true,
-        "declaration": true,
         "noEmit": true,
         "isolatedModules": true
     },
-    "include": ["src", "@types"]
+    "include": ["src"]
 }
