--- a/packages/frontend-react/package.json
+++ b/packages/frontend-react/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "scripts": {
         "a": "yarn g:a",
-        "dev": "yarn webpack serve",
+        "start": "node ./src/dev-server/index.js",
         "lint": "yarn lint-staged",
         "test": "jest",
         "test:watch": "jest --watch"
@@ -30,6 +30,7 @@
         "eslint-plugin-jsx-a11y": "6.4.1",
         "eslint-plugin-react": "7.23.2",
         "eslint-plugin-react-hooks": "4.2.0",
+        "express": "4.17.1",
         "html-webpack-plugin": "5.3.1",
         "jest": "26.6.3",
         "lint-staged": "10.5.4",
@@ -40,6 +41,8 @@
         "typescript": "4.2.4",
         "webpack": "5.31.2",
         "webpack-cli": "4.6.0",
-        "webpack-dev-server": "3.11.2"
+        "webpack-dev-middleware": "4.1.0",
+        "webpack-dev-server": "3.11.2",
+        "webpack-hot-middleware": "2.25.0"
     }
 }
