build(frontend-vue): Add the most basic configuration

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,6 +5,10 @@ packageExtensions:
   eslint-module-utils@*:
     dependencies:
       eslint-import-resolver-node: "*"
+  vue-loader@*:
+    peerDependencies:
+      '@vue/compiler-sfc': '*'
+      'webpack': '*'
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
