--- a/packages/frontend-react/package.json
+++ b/packages/frontend-react/package.json
@@ -3,7 +3,9 @@
     "private": true,
     "scripts": {
         "a": "yarn g:a",
-        "start": "node ./src/dev-server/index.js",
+        "start": "yarn start:ssr",
+        "start:no_ssr": "node ./src/dev-server/index.js",
+        "start:ssr": "node ./src/dev-server/index.js --ssr true",
         "lint": "yarn lint-staged",
         "test": "jest",
         "test:watch": "jest --watch"
@@ -34,6 +36,7 @@
         "html-webpack-plugin": "5.3.1",
         "jest": "26.6.3",
         "lint-staged": "10.5.4",
+        "minimist": "1.2.5",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-refresh": "0.10.0",
