--- a/packages/frontend-vue/.babelrc
+++ b/packages/frontend-vue/.babelrc
@@ -1,3 +1,3 @@
 {
-    "presets": ["@babel/env"]
+    "presets": ["@babel/preset-env", "babel-preset-typescript-vue", "@babel/preset-typescript"]
 }
