--- a/packages/frontend-vue/package.json
+++ b/packages/frontend-vue/package.json
@@ -9,9 +9,12 @@
         "@babel/cli": "7.13.16",
         "@babel/core": "7.13.16",
         "@babel/preset-env": "7.13.15",
+        "@babel/preset-typescript": "7.13.0",
         "@vue/compiler-sfc": "^3.0.11",
         "babel-loader": "8.2.2",
+        "babel-preset-typescript-vue": "1.1.1",
         "html-webpack-plugin": "5.3.1",
+        "typescript": "4.2.4",
         "vue": "next",
         "vue-loader": "next",
         "vue-router": "3.5.1",
