--- a/packages/frontend-react/.eslintrc
+++ b/packages/frontend-react/.eslintrc
@@ -1,6 +1,30 @@
 {
-    "extends": ["airbnb", "prettier"],
+    "extends": ["prettier"],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint"],
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"]
+            }
+        }
+    },
     "rules": {
-        "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+        "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+        "import/prefer-default-export": "off",
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "js": "never",
+                "jsx": "never",
+                "ts": "never",
+                "tsx": "never"
+            }
+        ],
+        "no-console": ["error", { "allow": ["warn", "error"] }],
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": ["error", "nofunc"],
+        "capitalized-comments": ["error", "always"]
     }
 }
