--- a/packages/frontend-react/package.json
+++ b/packages/frontend-react/package.json
@@ -24,6 +24,8 @@
         "@types/react-dom": "17.0.3",
         "@types/react-router-dom": "5.1.7",
         "@types/testing-library__jest-dom": "5.9.5",
+        "@typescript-eslint/eslint-plugin": "4.22.0",
+        "@typescript-eslint/parser": "4.22.0",
         "babel-loader": "8.2.2",
         "eslint": "7.23.0",
         "eslint-config-airbnb": "18.2.1",
