--- a/packages/frontend-react/package.json
+++ b/packages/frontend-react/package.json
@@ -31,6 +31,7 @@
         "eslint-config-airbnb": "18.2.1",
         "eslint-config-prettier": "8.1.0",
         "eslint-plugin-import": "2.22.1",
+        "eslint-plugin-jest": "24.3.6",
         "eslint-plugin-jsx-a11y": "6.4.1",
         "eslint-plugin-react": "7.23.2",
         "eslint-plugin-react-hooks": "4.2.0",
@@ -39,6 +40,7 @@
         "jest": "26.6.3",
         "lint-staged": "10.5.4",
         "minimist": "1.2.5",
+        "prettier": "2.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-refresh": "0.10.0",
