--- a/packages/frontend-react/package.json
+++ b/packages/frontend-react/package.json
@@ -19,6 +19,7 @@
         "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
         "@testing-library/jest-dom": "5.11.10",
         "@testing-library/react": "11.2.6",
+        "@types/express": "4.17.11",
         "@types/jest": "26.0.22",
         "@types/react": "17.0.3",
         "@types/react-dom": "17.0.3",
@@ -50,6 +51,8 @@
         "webpack-cli": "4.6.0",
         "webpack-dev-middleware": "4.1.0",
         "webpack-dev-server": "3.11.2",
-        "webpack-hot-middleware": "2.25.0"
+        "webpack-hot-middleware": "2.25.0",
+        "webpack-hot-server-middleware": "0.6.1",
+        "webpack-merge": "5.7.3"
     }
 }
